[package]
edition = "2018"
name = "timer"
version = "0.1.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nb = "1"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"

embedded-hal = { features = ["unproven"], version = "0.2.6" }
stm32f1xx-hal = {features = ["stm32f103", "rt", "medium"], version = "0.8.0" }
